[gd_scene load_steps=2 format=3 uid="uid://btdakvc1nwm4c"]

[ext_resource type="Script" uid="uid://bgjodeh0qcg2x" path="res://ui/pause_menu/pause_menu.gd" id="1_mnjdh"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mnjdh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45098)

[node name="MarginContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 75
text = "Game Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_pressed_color = Color(0.172833, 0.172833, 0.172833, 1)
theme_override_colors/icon_hover_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "Resume"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_pressed_color = Color(0.172833, 0.172833, 0.172833, 1)
theme_override_colors/icon_hover_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "Restart"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_pressed_color = Color(0.172833, 0.172833, 0.172833, 1)
theme_override_colors/icon_hover_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "Settings"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_hover_pressed_color = Color(0.172833, 0.172833, 0.172833, 1)
theme_override_colors/icon_hover_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35
text = "Exit"

[connection signal="button_up" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_button_up"]
